src/cli/snapshots/ghqctoolkit__cli__sitrep__tests__sitrep_display_ok.snap
---
source: src/cli/sitrep.rs
expression: make_sitrep(Ok(repo)).to_string()
---
[36m── [39m[1m[36mBinary[39m[0m [36m────────────────────────────────────[39m
[1mVersion:[0m 0.0.0-test
[1mPath:[0m /usr/local/bin/ghqc

[36m── [39m[1m[36mRepository[39m[0m [36m────────────────────────────────[39m
[1mDirectory:[0m /projects/myrepo
[1mRepository:[0m owner/repo (https://github.com/owner/repo)
[1mBranch:[0m main
[1mMilestones:[0m 2
  - v1.0 [open]: 4 open | 8 closed
  - v2.0 [open]: 2 open | 3 closed

[36m── [39m[1m[36mAuth[39m[0m [36m──────────────────────────────────────[39m
[1mstore directory:[0m /home/user/.local/share/ghqc/auth
[1mstored tokens:[0m none

[1mrepository host:[0m github.com
[1mavailable auth sources:[0m unknown

[36m── [39m[1m[36mConfiguration[39m[0m [36m─────────────────────────────[39m
[1mDirectory:[0m /config/path    ❌ Directory not found
[1mRepository:[0m owner/repo (https://github.com/owner/repo)
[1mChecklists:[0m 1
  - Custom: 1 items
[1mOptions:[0m
  - Prepended Checklist Note: (none)
  - Checklist Display Name: checklists
  - Include Collaborators: yes
  - Logo Path: logo.png
  - Checklist Directory: checklists
  - Record Template Path: record.typ
  - UI Repo Refresh Rate: 15s
  - Allow Config Update From UI: yes
